# seguranca-publica-rj

./: .gitignore  pyproject.toml
data/: populacao_br_24.csv
notebooks/: Análise de Criminalidade no Rio de Jan.py  analise.ipynb  analise_RJ.ipynb  analise_obitos_datasus.ipynb  analise_variaveis.ipynb  otimizado.ipynb  teste_streamlit.ipynb
scripts/: otimizado.py
